--- a/Project.toml
+++ b/Project.toml
@@ -25,3 +25,9 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 BSON = "0.2.5"
 Distributions = "0.21.9"
 Flux = "0.9.0"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
