added new simulation setup

--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -5,7 +5,8 @@ SHELL:=/bin/bash
 
 # Simulation experiment name
 # SIM_EXP_NAME = test-sim-6-3
-SIM_EXP_NAME = test-sim-6-5
+# SIM_EXP_NAME = test-sim-6-5
+SIM_EXP_NAME = test-sim-6-5-1
 
 # Simulation settings dir
 SIM_CONFIG_DIR = configs/$(SIM_EXP_NAME)
