--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -6,7 +6,8 @@ SHELL:=/bin/bash
 # Simulation experiment name
 # SIM_EXP_NAME = test-sim-6-3
 # SIM_EXP_NAME = test-sim-6-5
-SIM_EXP_NAME = test-sim-6-5-1
+# SIM_EXP_NAME = test-sim-6-5-1
+SIM_EXP_NAME = test-sim-6-5-2
 
 # Simulation settings dir
 SIM_CONFIG_DIR = configs/$(SIM_EXP_NAME)
