don't send zipped files to aws

--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -46,7 +46,7 @@ postproc:
 	aws s3 sync $(SIM_RESULTS_DIR) $(SIM_AWS_BUCKET) --exclude '*.nfs*'
 
 sendoutput:
-	aws s3 sync $(SIM_RESULTS_DIR) $(SIM_AWS_BUCKET) --exclude '*.nfs*'
+	aws s3 sync $(SIM_RESULTS_DIR) $(SIM_AWS_BUCKET) --exclude '*.nfs*' --exclude '*.zip*'
 
 metrics:
 	julia metrics.jl $(SIM_RESULTS_DIR)
