added new experiment -- same initial values

--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -10,7 +10,8 @@ SHELL:=/bin/bash
 # SIM_EXP_NAME = test-sim-6-5-2
 # SIM_EXP_NAME = test-sim-6-6
 # SIM_EXP_NAME = test-sim-6-6-1
-SIM_EXP_NAME = test-sim-6-7
+# SIM_EXP_NAME = test-sim-6-7
+SIM_EXP_NAME = test-sim-6-7-1
 
 # Run script
 # RUN_SCRIPT = run.jl
