doing experiment with iMCMC + coarsening

--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -15,11 +15,12 @@ SHELL:=/bin/bash
 # SIM_EXP_NAME = test-sim-6-7-2
 # SIM_EXP_NAME = test-sim-6-7-3
 # SIM_EXP_NAME = test-sim-6-7-4
-SIM_EXP_NAME = test-sim-6-7-5
+# SIM_EXP_NAME = test-sim-6-7-5
+SIM_EXP_NAME = test-sim-6-7-6
 
 # Run script
-# RUN_SCRIPT = run.jl
-RUN_SCRIPT = run-pt.jl
+RUN_SCRIPT = run.jl
+# RUN_SCRIPT = run-pt.jl
 
 # Simulation settings dir
 SIM_CONFIG_DIR = configs/$(SIM_EXP_NAME)
