--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -17,7 +17,10 @@ SHELL:=/bin/bash
 # SIM_EXP_NAME = test-sim-6-7-4
 # SIM_EXP_NAME = test-sim-6-7-5
 # SIM_EXP_NAME = test-sim-6-7-6
-SIM_EXP_NAME = test-sim-6-7-7
+# SIM_EXP_NAME = test-sim-6-7-7
+
+# SIM_EXP_NAME = test-sim-6-7-8
+SIM_EXP_NAME = test-sim-6-7-9
 
 # Run script
 RUN_SCRIPT = run.jl
