--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -18,9 +18,11 @@ SHELL:=/bin/bash
 # SIM_EXP_NAME = test-sim-6-7-5
 # SIM_EXP_NAME = test-sim-6-7-6
 # SIM_EXP_NAME = test-sim-6-7-7
-
 # SIM_EXP_NAME = test-sim-6-7-8
-SIM_EXP_NAME = test-sim-6-7-9
+# SIM_EXP_NAME = test-sim-6-7-9
+
+SIM_EXP_NAME = test-sim-6-7-10
+# SIM_EXP_NAME = test-sim-6-7-11
 
 # Run script
 RUN_SCRIPT = run.jl
