--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -21,9 +21,12 @@ SHELL:=/bin/bash
 # SIM_EXP_NAME = test-sim-6-7-8
 # SIM_EXP_NAME = test-sim-6-7-9
 # SIM_EXP_NAME = test-sim-6-7-10
+# SIM_EXP_NAME = test-sim-6-7-12
 
+# NOTE: completed, but unprocessed
 # SIM_EXP_NAME = test-sim-6-7-11
-SIM_EXP_NAME = test-sim-6-7-12
+
+SIM_EXP_NAME = test-sim-6-7-13
 
 # Run script
 RUN_SCRIPT = run.jl
