--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -22,11 +22,13 @@ SHELL:=/bin/bash
 # SIM_EXP_NAME = test-sim-6-7-9
 # SIM_EXP_NAME = test-sim-6-7-10
 # SIM_EXP_NAME = test-sim-6-7-12
+# SIM_EXP_NAME = test-sim-6-7-13
 
 # NOTE: completed, but unprocessed
 # SIM_EXP_NAME = test-sim-6-7-11
 
-SIM_EXP_NAME = test-sim-6-7-13
+SIM_EXP_NAME = test-sim-6-7-14
+# SIM_EXP_NAME = test-sim-6-7-15
 
 # Run script
 RUN_SCRIPT = run.jl
