--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -25,11 +25,12 @@ SHELL:=/bin/bash
 # SIM_EXP_NAME = test-sim-6-7-13
 # SIM_EXP_NAME = test-sim-6-7-14
 # SIM_EXP_NAME = test-sim-6-7-15
+# SIM_EXP_NAME = test-sim-6-7-16
 
 # NOTE: completed, but unprocessed
 # SIM_EXP_NAME = test-sim-6-7-11
 
-SIM_EXP_NAME = test-sim-6-7-16
+SIM_EXP_NAME = test-sim-6-7-17
 
 # Run script
 RUN_SCRIPT = run.jl
