--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -29,11 +29,12 @@ SHELL:=/bin/bash
 # SIM_EXP_NAME = test-sim-6-7-17
 # SIM_EXP_NAME = test-sim-6-7-18
 # SIM_EXP_NAME = test-sim-6-7-19
+# SIM_EXP_NAME = test-sim-6-7-20
 
 # NOTE: completed, but unprocessed
 # SIM_EXP_NAME = test-sim-6-7-11
 
-SIM_EXP_NAME = test-sim-6-7-20
+SIM_EXP_NAME = test-sim-6-7-21
 
 # Run script
 RUN_SCRIPT = run.jl
