ensure aws_dir does not have slash at the end // has a different meaning

--- a/runs/patients/Makefile
+++ b/runs/patients/Makefile
@@ -1,5 +1,5 @@
 data_dir = ../data
-aws_bucket = s3://cytof-repfam/data/
+aws_bucket = s3://cytof-repfam/data
 
 path_to_transformed_patients_data = $(data_dir)/transformed-patients-data
 aws_path_to_transformed_patients_data = $(aws_bucket)/transformed-patients-data
