don't send gitignore

--- a/dev/patients-eda/Makefile
+++ b/dev/patients-eda/Makefile
@@ -2,7 +2,7 @@ data_dir = data
 aws_bucket = s3://cytof-repfam/data/patients
 
 send-data:
-	aws s3 sync $(data_dir) $(aws_bucket)
+	aws s3 sync $(data_dir) $(aws_bucket) --exclude "*/.gitignore"
 
 get-data:
 	aws s3 sync $(aws_bucket) $(data_dir)
