--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -40,7 +40,8 @@ SIM_EXP_NAME = test-sim-6-8-1
 
 # Run script
 # RUN_SCRIPT = run.jl
-RUN_SCRIPT = run-pt.jl
+# RUN_SCRIPT = run-pt.jl
+RUN_SCRIPT = run-imcmc-pt.jl
 
 # Simulation settings dir
 SIM_CONFIG_DIR = configs/$(SIM_EXP_NAME)
