--- a/runs/sim-study/Makefile
+++ b/runs/sim-study/Makefile
@@ -73,7 +73,7 @@ clean:
 getoutput:
 	aws s3 sync $(SIM_AWS_BUCKET) $(SIM_RESULTS_DIR) \
 		--exclude "*/output.bson" --exclude "*/simdat.bson" \
-		--exclude "*/master-log.txt"
+		--exclude "master-log.txt"
 
 getalloutput:
 	aws s3 sync $(SIM_AWS_BUCKET) $(SIM_RESULTS_DIR)
