ready for real runs

--- a/runs/patients/runs/run1/Makefile
+++ b/runs/patients/runs/run1/Makefile
@@ -20,7 +20,7 @@ test-run:
 		rdir=$(results_dir)/phi$$phi; \
 		mkdir -p $$rdir; \
 		sleep 3; \
-		julia run.jl $$phi $(data_paths) $$rdir $(AWS_BUCKET)/$$rdir 1 \
+		julia run.jl $$phi $(data_paths) $$rdir $(AWS_BUCKET)/phi$$phi 1 \
 			&> $$rdir/log.txt & \
 	done
 
