getoutput now does not pull log.txt (large)

--- a/runs/sim-study/configs/test-sim-6-8-3/Makefile
+++ b/runs/sim-study/configs/test-sim-6-8-3/Makefile
@@ -12,5 +12,5 @@ getalloutput:
 
 getoutput:
 	aws s3 sync $(AWS_DIR) $(RESULTS_DIR) \
-		--exclude "*/output.bson" --exclude "*/simdat.bson"
+		--exclude "*/output.bson" --exclude "*/simdat.bson"  -- exclude "*/log.txt"
 
