made plots nicer

--- a/runs/sim-study/configs/test-sim-6-8-5/tex/Makefile
+++ b/runs/sim-study/configs/test-sim-6-8-5/tex/Makefile
@@ -18,7 +18,7 @@ watch:
 	latexmk -pvc -pdf $(fname).tex
 
 getresults:
-	rm results
+	rm -f results
 	ln -s $(SCRATCHDIR)/$(simname) results
 	make plots -s 
 
