need to make flowsom plots

--- a/runs/patients/runs/run11/tsne/Makefile
+++ b/runs/patients/runs/run11/tsne/Makefile
@@ -9,3 +9,9 @@ link_results:
 
 sendimg:
 		aws s3 sync $(RESULTS_DIR)/tsne $(AWS_BUCKET)/tsne
+
+plot:
+	python3 make_tsne.py
+	Rscript get_flowsom_clust.R
+	Rscript get_mclust_clust.R
+	python3 make_plots.py
